fixed text align in copyright string

--- a/main.css
+++ b/main.css
@@ -41,6 +41,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 .lyrics-snippet {
   display: flex;
